; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/t/extr_..libquicly.c_quicly_send_stateless_reset.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/t/extr_..libquicly.c_quicly_send_stateless_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { %struct.TYPE_13__, i32, i32 }
%struct.TYPE_13__ = type { i32*, i32 }
%struct.TYPE_15__ = type { %struct.TYPE_16__*, %struct.TYPE_17__*, %struct.TYPE_12__* }
%struct.TYPE_16__ = type { i32 (%struct.TYPE_16__*, %struct.TYPE_14__*)*, %struct.TYPE_14__* (%struct.TYPE_16__*, i32)* }
%struct.TYPE_17__ = type { i32 (%struct.TYPE_17__*, i32*, i8*)* }
%struct.TYPE_12__ = type { i32 (i32*, i32)* }
%struct.sockaddr = type { i32 }

@QUICLY_STATELESS_RESET_PACKET_MIN_LEN = common dso_local global i32 0, align 4
@QUICLY_STATELESS_RESET_TOKEN_LEN = common dso_local global i32 0, align 4
@QUICLY_QUIC_BIT = common dso_local global i32 0, align 4
@QUICLY_LONG_HEADER_RESERVED_BITS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_14__* @quicly_send_stateless_reset(%struct.TYPE_15__* %0, %struct.sockaddr* %1, %struct.sockaddr* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_14__*, align 8
  %6 = alloca %struct.TYPE_15__*, align 8
  %7 = alloca %struct.sockaddr*, align 8
  %8 = alloca %struct.sockaddr*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_14__*, align 8
  store %struct.TYPE_15__* %0, %struct.TYPE_15__** %6, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %7, align 8
  store %struct.sockaddr* %2, %struct.sockaddr** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_16__*, %struct.TYPE_16__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %13, i32 0, i32 1
  %15 = load %struct.TYPE_14__* (%struct.TYPE_16__*, i32)*, %struct.TYPE_14__* (%struct.TYPE_16__*, i32)** %14, align 8
  %16 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_16__*, %struct.TYPE_16__** %17, align 8
  %19 = load i32, i32* @QUICLY_STATELESS_RESET_PACKET_MIN_LEN, align 4
  %20 = call %struct.TYPE_14__* %15(%struct.TYPE_16__* %18, i32 %19)
  store %struct.TYPE_14__* %20, %struct.TYPE_14__** %10, align 8
  %21 = icmp eq %struct.TYPE_14__* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %4
  store %struct.TYPE_14__* null, %struct.TYPE_14__** %5, align 8
  br label %100

23:                                               ; preds = %4
  %24 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %25 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %24, i32 0, i32 2
  %26 = load %struct.sockaddr*, %struct.sockaddr** %7, align 8
  %27 = call i32 @set_address(i32* %25, %struct.sockaddr* %26)
  %28 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %29 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %28, i32 0, i32 1
  %30 = load %struct.sockaddr*, %struct.sockaddr** %8, align 8
  %31 = call i32 @set_address(i32* %29, %struct.sockaddr* %30)
  %32 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %32, i32 0, i32 2
  %34 = load %struct.TYPE_12__*, %struct.TYPE_12__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %34, i32 0, i32 0
  %36 = load i32 (i32*, i32)*, i32 (i32*, i32)** %35, align 8
  %37 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %38 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %37, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %38, i32 0, i32 0
  %40 = load i32*, i32** %39, align 8
  %41 = load i32, i32* @QUICLY_STATELESS_RESET_PACKET_MIN_LEN, align 4
  %42 = load i32, i32* @QUICLY_STATELESS_RESET_TOKEN_LEN, align 4
  %43 = sub nsw i32 %41, %42
  %44 = call i32 %36(i32* %40, i32 %43)
  %45 = load i32, i32* @QUICLY_QUIC_BIT, align 4
  %46 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %47 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %47, i32 0, i32 0
  %49 = load i32*, i32** %48, align 8
  %50 = getelementptr inbounds i32, i32* %49, i64 0
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* @QUICLY_LONG_HEADER_RESERVED_BITS, align 4
  %53 = xor i32 %52, -1
  %54 = and i32 %51, %53
  %55 = or i32 %45, %54
  %56 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %57 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %57, i32 0, i32 0
  %59 = load i32*, i32** %58, align 8
  %60 = getelementptr inbounds i32, i32* %59, i64 0
  store i32 %55, i32* %60, align 4
  %61 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %62 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %61, i32 0, i32 1
  %63 = load %struct.TYPE_17__*, %struct.TYPE_17__** %62, align 8
  %64 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %63, i32 0, i32 0
  %65 = load i32 (%struct.TYPE_17__*, i32*, i8*)*, i32 (%struct.TYPE_17__*, i32*, i8*)** %64, align 8
  %66 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %67 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %66, i32 0, i32 1
  %68 = load %struct.TYPE_17__*, %struct.TYPE_17__** %67, align 8
  %69 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %70 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %69, i32 0, i32 0
  %71 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %70, i32 0, i32 0
  %72 = load i32*, i32** %71, align 8
  %73 = load i32, i32* @QUICLY_STATELESS_RESET_PACKET_MIN_LEN, align 4
  %74 = sext i32 %73 to i64
  %75 = getelementptr inbounds i32, i32* %72, i64 %74
  %76 = load i32, i32* @QUICLY_STATELESS_RESET_TOKEN_LEN, align 4
  %77 = sext i32 %76 to i64
  %78 = sub i64 0, %77
  %79 = getelementptr inbounds i32, i32* %75, i64 %78
  %80 = load i8*, i8** %9, align 8
  %81 = call i32 %65(%struct.TYPE_17__* %68, i32* %79, i8* %80)
  %82 = icmp ne i32 %81, 0
  br i1 %82, label %94, label %83

83:                                               ; preds = %23
  %84 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %85 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %84, i32 0, i32 0
  %86 = load %struct.TYPE_16__*, %struct.TYPE_16__** %85, align 8
  %87 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %86, i32 0, i32 0
  %88 = load i32 (%struct.TYPE_16__*, %struct.TYPE_14__*)*, i32 (%struct.TYPE_16__*, %struct.TYPE_14__*)** %87, align 8
  %89 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %90 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %89, i32 0, i32 0
  %91 = load %struct.TYPE_16__*, %struct.TYPE_16__** %90, align 8
  %92 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %93 = call i32 %88(%struct.TYPE_16__* %91, %struct.TYPE_14__* %92)
  store %struct.TYPE_14__* null, %struct.TYPE_14__** %5, align 8
  br label %100

94:                                               ; preds = %23
  %95 = load i32, i32* @QUICLY_STATELESS_RESET_PACKET_MIN_LEN, align 4
  %96 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %97 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %96, i32 0, i32 0
  %98 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %97, i32 0, i32 1
  store i32 %95, i32* %98, align 8
  %99 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  store %struct.TYPE_14__* %99, %struct.TYPE_14__** %5, align 8
  br label %100

100:                                              ; preds = %94, %83, %22
  %101 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  ret %struct.TYPE_14__* %101
}

declare dso_local i32 @set_address(i32*, %struct.sockaddr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
